[package]
name = "agent-core"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
arcstr.workspace = true
bytes.workspace = true
pin-project-lite.workspace = true
prometheus-client.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-core.workspace = true
