[package]
name = "mock-server"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
name = "mock_server"
path = "src/lib.rs"

[[bin]]
name = "mock-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
tokio.workspace = true
