[package]
name = "agent-xds"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[dependencies]
agent-core.workspace = true
anyhow.workspace = true
async-stream.workspace = true
prometheus-client.workspace = true
prost.workspace = true
prost-types.workspace = true
split-iter.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true

[build-dependencies]
anyhow.workspace = true
prost-build.workspace = true
tonic-prost-build.workspace = true
protox.workspace = true
