[project]
name = "calculator"
version = "0.1.0"
description = "Calculator agent using Strands Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "strands-agents[a2a]>=1.0.1",
    "strands-agents-tools>=0.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
